# Rust-ActixWeb-Newspaper

./: Cargo.toml  Dockerfile
.sqlx/: query-68faf59545010d05804443190bb54ceddb94dd0fa99125189d691dafe0f0b82c.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240822113450_create_subscriptions_table.sql  20240921082537_make_status_not_null_in_subscriptions.sql  20240921082722_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription_confirm.rs  subscriptions.rs
